--- a/views/scan-cScan.ejs
+++ b/views/scan-cScan.ejs
@@ -29,18 +29,8 @@
         <td></td>
         <td></td>
         <td></td>
-        <td style="width: 80%">
-          <input
-            type="radio"
-            class="btn-check btn-outline"
-            name="mode"
-            id="scan"
-            value="scan"
-            autocomplete="off"
-            checked
-          />
-          <label class="btn btn-outline" for="scan">SCAN</label>
 
+        <td style="width: 80%">
           <input
             type="radio"
             class="btn-check btn-outline"
@@ -50,7 +40,18 @@
             autocomplete="off"
           />
 
-          <label class="btn btn-outline mode" for="cScan">C SCAN</label>
+          <label class="btn btn-outline" for="cScan">C-SCAN</label>
+          <input
+            type="radio"
+            class="btn-check btn-outline"
+            name="mode"
+            id="scan"
+            value="scan"
+            autocomplete="off"
+            checked
+          />
+          <label class="btn btn-outline mode" for="scan">SCAN</label>
+
           <input
             type="radio"
             class="btn-check btn-outline"
