--- a/views/bankerSolution.ejs
+++ b/views/bankerSolution.ejs
@@ -6,6 +6,6 @@
   </div>
 <% } else{ %>
   <% for (var i=0; i < processSequence.length; i++) { %>
-    <h1 class="headings"> <%= processSequence[i] %></h1>
+    <h1> <%= processSequence[i] %></h1>
     <% } %>
   <% } %>
