--- a/views/scanSolution.ejs
+++ b/views/scanSolution.ejs
@@ -1,5 +1,9 @@
 <%- include('./includes/head.ejs') %>
 
+<div class="center">
+    <h1 class="headings">SCAN <span>/</span> C-SCAN</h1>
+  </div>
+
 <% for (var i=0; i < completed_processes.length; i++) { %>
     <h1> <%= completed_processes[i].id %> </h1>
     <% } %>
