--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -17,7 +17,7 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
