--- a/views/random.ejs
+++ b/views/random.ejs
@@ -7,7 +7,7 @@
 </div>
 
 <h1 style="color: white;" class="center">Completed Process Sequence</h1>
-<div style="display: flex; flex-direction: row ; justify-content: center ; margin: 0 auto 100px;">
+<div class="solution-heading">
 <% for (var i=0; i < completed_processes.length; i++) { %>
     <h1 style="margin: auto 20px; color: white;">
         <%= completed_processes[i].id %>
