--- a/public/css/app.css
+++ b/public/css/app.css
@@ -336,3 +336,12 @@ a {
   justify-content: center;
   margin: 0 auto 100px;
 }
+
+#myChart{
+  width: 1154px;
+  display: block;
+  box-sizing: border-box;
+  height: 577px;
+  margin: auto;
+  padding-bottom: 50px;
+}
