--- a/views/random.ejs
+++ b/views/random.ejs
@@ -76,7 +76,7 @@
                 },
                 title: {
                   display: true,
-                  text: "Burst time",
+                  text: "Track Number",
                   font: {
                     size: 20,
                   },
