--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -39,7 +39,7 @@
                             <li><a class="dropdown-item" href="/round-robin">Round Robin</a></li>
                             <li><a class="dropdown-item" href="/banker's-algo">Banker's Algorithm</a></li>
                             <li><a class="dropdown-item" href="/scan-cScan">SCAN CSCAN</a></li>
-                            <li><a class="dropdown-item" href="/MRU">MRU Page Replacement Algorithm</a></li>
+                            <li><a class="dropdown-item" href="/mru">MRU Page Replacement Algorithm</a></li>
                         </ul>
                     </li>
                     <a class="nav-link" href="#aboutUs">About</a>
