--- a/views/MRU.ejs
+++ b/views/MRU.ejs
@@ -5,9 +5,7 @@
     </div>
 
     <div class="container">
-        <div class="container">
-
-
+        <form action="/mru" method="POST" id="myForm">
             <table class=" table table-striped table-dark" style="width: 50rem; margin: 0 auto;">
                 <tr>
                     <td></td>
@@ -15,8 +13,11 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td scope="col">
-                        Enter Frame:<input type="number" name="quantum" id="quantum" required="required"
+                        Enter Frame:<input type="number" name="frame" id="frame" required="required"
                             class="smallCell" />
                     </td>
                     <td></td>
@@ -26,53 +27,23 @@
                     <thead>
                         <tr>
                             <th scope="col" colspan="3" style="text-align: center">Reference</th>
-                            <th scope="col" rowspan="2" style="vertical-align: middle; width: 11rem">
-                                Delete Row
-                            </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="col" colspan="3" style="text-align: center"><input type="number" name="allocA"
-                                    class="smallCellData" id="allocA" required="required" style="text-align: center" />
+                            <th scope="col" colspan="3" style="text-align: center"><input type="number" name="reference"
+                                    class="smallCellData" id="reference" required="required"
+                                    style="text-align: center" />
                             </th>
-                            <td>
-                                <button onclick="deleteRow(this)" class="delete-button">
-                                    Delete
-                                </button>
-                            </td>
                         </tr>
                     </tbody>
                 </table>
             </table>
-        </div>
-        <div class="container">
-            <div class="center">
-                <button class="b1" type="button" onclick="addNewReference()">Add Reference</button>
+            <div style="display: inline; margin: 20px 30px;">
+                <button type="submit" class="b1">Calculate</button>
             </div>
-        </div>
-        <script>
-            function addNewReference() {
-                var table = document.getElementById("myTable");
-                var newRow = table.insertRow(-1); // Add row at the end
-                var pNumCell = newRow.insertCell(0);
-                pNumCell.innerHTML =
-                    '<input type="text" name="quantum" value="" id="quantum" class="smallCell" required="required">';
-
-                var deleteButton = document.createElement("button");
-                deleteButton.classList.add("delete-button");
-                deleteButton.innerHTML = "Delete";
-                deleteButton.onclick = function () {
-                    deleteRow(this);
-                };
-                buttonCell.appendChild(deleteButton);
-            }
-
-            function deleteRow(btn) {
-                var row = btn.parentNode.parentNode;
-                row.parentNode.removeChild(row);
-            }
-        </script>
+        </form>
+    </div>
     </div>
 
     <%- include('./includes/end.ejs') %>
