chaged the calculate button in mru

--- a/views/MRU.ejs
+++ b/views/MRU.ejs
@@ -39,9 +39,9 @@
                     </tbody>
                 </table>
             </table>
-            <div style="display: inline; margin: 20px 30px;">
-                <button type="submit" class="b1">Calculate</button>
-            </div>
+            <div style="margin: auto; display: flex;">
+                <button type="submit" class="b1" style="margin: auto;">Calculate</button>
+              </div>
         </form>
     </div>
     </div>
