--- a/views/MRUsolution.ejs
+++ b/views/MRUsolution.ejs
@@ -1,35 +1,44 @@
 <%- include('./includes/head.ejs') %>
 
-<div class="center">
-  <h1 class="headings">MRU SOLUTION</h1>
-</div>
+    <div class="center">
+        <h1 class="headings">MRU SOLUTION</h1>
+    </div>
 
-<div class="container" style="text-align: center">
-  <table class="table table-striped table-dark">
-    <thead>
-      <tr>
-        <th>Page</th>
-        <% for (var i=0; i < refString.length; i++) { %>
-        <th><%= refString[i] %></th>
-        <% } %>
-      </tr>
-    </thead>
-    <tbody>
-      <% for (var j=0; j < frame; j++) { %>
-      <tr>
-        <td><%= j %></td>
-        <% for (var k=0; k < refString.length; k++) { %>
-        <td><%= totalPages[k][j] %></td>
-        <% } %>
-      </tr>
-      <% } %>
-    </tbody>
-  </table>
-</div>
-<h1 style="color: white; margin: 50px; font-size: 40px" class="center">
-  <a style="text-decoration: underline; text-decoration-color: #dd2682; margin-right: 20px;">Number of Hits:</a><%= hit %>
-</h1>
-<h1 style="color: white; font-size: 40px" class="center">
-    <a style="text-decoration: underline; text-decoration-color: #dd2682; margin-right: 20px;">Number of Page Faults:</a><%= pageFault %>
-</h1>
-<%- include('./includes/end.ejs') %>
+    <div class="container" style="text-align: center">
+        <table class="table table-striped table-dark">
+            <thead>
+                <tr>
+                    <th>Page</th>
+                    <% for (var i=0; i < refString.length; i++) { %>
+                        <th>
+                            <%= refString[i] %>
+                        </th>
+                        <% } %>
+                </tr>
+            </thead>
+            <tbody>
+                <% for (var j=0; j < frame; j++) { %>
+                    <tr>
+                        <td>
+                            <%= j %>
+                        </td>
+                        <% for (var k=0; k < refString.length; k++) { %>
+                            <td>
+                                <%= totalPages[k][j] %>
+                            </td>
+                            <% } %>
+                    </tr>
+                    <% } %>
+            </tbody>
+        </table>
+    </div>
+    <h1 style="color: white; margin: 50px; font-size: 40px" class="center">
+        <a style="text-decoration: underline; text-decoration-color: #dd2682; margin-right: 20px;">Number of Hits:</a>
+        <%= hit %>
+    </h1>
+    <h1 style="color: white; font-size: 40px" class="center">
+        <a style="text-decoration: underline; text-decoration-color: #dd2682; margin-right: 20px;">Number of Page
+            Faults:</a>
+        <%= pageFault %>
+    </h1>
+    <%- include('./includes/end.ejs') %>
