--- a/views/MRUsolution.ejs
+++ b/views/MRUsolution.ejs
@@ -5,23 +5,25 @@
     </div>
 
     <div class="container" style="text-align: center">
-        <table class="table table-striped table-dark">
+        <table class="table table-striped table-dark" style="border: 1px solid #dd2682;">
             <thead>
                 <tr>
-                    <th>Page</th>
+                    <th style="font-weight: 600">Page</th>
                     <% for (var i=0; i < refString.length; i++) { %>
-                        <th>
+                        <th style="font-weight: 600">
                             <%= refString[i] %>
                         </th>
                         <% } %>
                 </tr>
             </thead>
+        </table>
+        <table class="table table-striped table-dark">
             <tbody>
                 <% for (var j=0; j < frame; j++) { %>
                     <tr>
-                        <td>
-                            <%= j %>
-                        </td>
+                        <th style="font-weight: 600; width: 104.98px;">
+                            <%= j+1 %>
+                        </th>
                         <% for (var k=0; k < refString.length; k++) { %>
                             <td>
                                 <%= totalPages[k][j] %>
@@ -33,12 +35,23 @@
         </table>
     </div>
     <h1 style="color: white; margin: 50px; font-size: 40px" class="center">
-        <a style="text-decoration: underline; text-decoration-color: #dd2682; margin-right: 20px;">Number of Hits:</a>
+        <a style="
+      text-decoration: underline;
+      text-decoration-color: #dd2682;
+      text-decoration-thickness: 2px;
+      text-underline-offset: 3px;
+      margin-right: 20px;
+    ">Number of Hits:</a>
         <%= hit %>
     </h1>
     <h1 style="color: white; font-size: 40px" class="center">
-        <a style="text-decoration: underline; text-decoration-color: #dd2682; margin-right: 20px;">Number of Page
-            Faults:</a>
+        <a style="
+      text-decoration: underline;
+      text-decoration-color: #dd2682;
+      text-decoration-thickness: 2px;
+      text-underline-offset: 3px;
+      margin-right: 20px;
+    ">Number of Page Faults:</a>
         <%= pageFault %>
     </h1>
     <%- include('./includes/end.ejs') %>
