--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,6 +21,8 @@
     </head>
 
     <body>
+        <!-- <div id="blob"></div>
+    <div id="blur"></div> -->
         <div id="progressBar"></div>
         <div class="container-fluid px-0" id="first">
             <div class="row align-items-center firstDiv">
@@ -52,7 +54,7 @@
             <div class="row align-items-center">
 
                 <div class="col-md-6 order-2 order-md-1" id="img2">
-                    <img class="img-fluid" src="imgs/RR_1.jpeg" alt="RR">
+                    <img class="img-fluid" src="imgs/round.png" alt="RR">
                 </div>
 
                 <div class="col-md-6 text-center order-1 order-md-2">
@@ -87,7 +89,7 @@
                 </div>
 
                 <div class="col-md-6" id="img3">
-                    <img class="img-fluid" src="imgs/BANKER_1.jpeg" alt="Banker">
+                    <img class="img-fluid" src="imgs/banker.png" alt="Banker">
                 </div>
 
             </div>
@@ -97,7 +99,7 @@
         <div class="container-fluid px-0" id="fourth">
             <div class="row align-items-center">
                 <div class="col-md-6" id="img3">
-                    <img class="img-fluid" src="imgs/SCAN_1.jpeg" alt="SCAN">
+                    <img class="img-fluid" src="imgs/scan.png" alt="SCAN">
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="row d-flex justify-content-center material">
@@ -129,8 +131,7 @@
                             <!-- <section class="d-flex justify-content-center">
                                 <img class="d-none d-lg-block" src="imgs/lolli_icon.png" alt="icon">
                             </section> -->
-                            <p class="lead-para">The SCAN Disk Scheduling Algorithm is often referred to as the Elevator
-                                algorithm. This allows the head or pointer to move in either direction
+                            <p class="lead-para">MRU replaces the most recently used page in the main memory's page frame. MRU outperforms all other page replacement algorithms for a particular sort of page references request sequence in which the same sequence of same page references is repeated (in a loop).
                                 </p>
                                 <a class="simulator"href="/mru">Simulator</a>
                         </div>
@@ -138,7 +139,7 @@
                 </div>
 
                 <div class="col-md-6" id="img3">
-                    <img class="img-fluid" src="imgs/MRU_1.jpeg" alt="MRU">
+                    <img class="img-fluid" src="imgs/mru.png" alt="MRU">
                 </div>
 
             </div>
@@ -180,7 +181,7 @@
                 </div>
             </div>
         </div>
-        </script>
+        
 
         <%- include('./includes/end.ejs') %>
 
