--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,52 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> <%= title %> </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= title %></title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="../css/app.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="icon" href="/imgs/favicon.ico">
+    <link rel="stylesheet" href="../css/app.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" href="/imgs/favicon.ico" />
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
+      rel="stylesheet"
+    />
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav id="mainNavbar" class="navbar navbar-expand-md navbar-dark py-0 fixed-top">
-            <a class="navbar-brand" href="/">Team7</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
-                            aria-expanded="false">Projects</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/round-robin">Round Robin</a></li>
-                            <li><a class="dropdown-item" href="/banker's-algo">Banker's Algorithm</a></li>
-                            <li><a class="dropdown-item" href="/scan-cScan">SCAN CSCAN</a></li>
-                            <li><a class="dropdown-item" href="/mru">MRU Page Replacement Algorithm</a></li>
-                        </ul>
-                    </li>
-                    <a class="nav-link" href="#aboutUs">About</a>
-                </div>
-            </div>
-        </nav>
+      <nav
+        id="mainNavbar"
+        class="navbar navbar-expand-md navbar-dark py-0 fixed-top"
+      >
+        <a class="navbar-brand" href="/">Team7</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Projects</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="/round-robin">Round Robin</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/banker's-algo"
+                    >Banker's Algorithm</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/scan-cScan">SCAN CSCAN</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/mru"
+                    >MRU Page Replacement Algorithm</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <a class="nav-link" href="#aboutUs">About</a>
+          </div>
+        </div>
+      </nav>
     </header>
+
     <!-- <link rel="stylesheet" href="../css/home.css"> -->
-    <link rel="stylesheet" href="../css/app.css">
-    <link rel="stylesheet" href="../css/rr.css">
+    <link rel="stylesheet" href="../css/app.css" />
+    <link rel="stylesheet" href="../css/rr.css" />
+  </body>
+</html>
