--- a/views/round-robin.ejs
+++ b/views/round-robin.ejs
@@ -1,109 +1,107 @@
 <%- include('./includes/head.ejs') %>
 
-<div class="center">
-  <h1 class="headings">ROUND ROBIN</h1>
-</div>
+  <% var idx=0; %>
 
-<div class="container" style="text-align: center">
-  <form action="/round-robin" method="POST" id="myForm">
-    <table class="table table-striped table-dark">
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td scope="col">
-          Enter Quantum:<input
-            type="number"
-            name="quantum"
-            id="quantum"
-            required="required"
-            class="smallCell"
-          />
-        </td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
-    <table class="table table-striped table-dark" id="myTable">
-      <thead>
-        <tr>
-          <th scope="col" style="width: 20rem">Process ID</th>
-          <th scope="col" style="width: 20rem">Arrival Time</th>
-          <th scope="col" style="width: 20rem">Burst Time</th>
-          <th scope="col" style="width: 20rem">Delete Row</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <input
-              type="number"
-              min="1"
-              max="20"
-              name="pId"
-              id="pId"
-              required="required"
-              style="width: 200px"
-            />
-          </td>
-          <td><input type="number" name="at" id="at" required="required" /></td>
-          <td><input type="number" name="bt" id="bt" required="required" /></td>
-          <td>
-            <button onclick="deleteRow(this)" class="delete-button">
-              Delete
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
-    <div style="display: inline; margin: 20px 30px">
-      <button type="button" class="b1" type="button" onclick="addRow()">
-        Add Row
-      </button>
+    <div class="center">
+      <h1 class="headings">ROUND ROBIN</h1>
     </div>
 
-    <div style="display: inline; margin: 20px 30px;">
-      <button type="submit" class="b1">Calculate</button>
+    <div class="container" style="text-align: center">
+      <form action="/round-robin" method="POST" id="myForm">
+        <table class="table table-striped table-dark">
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td scope="col">
+              Enter Quantum:<input type="number" name="quantum" id="quantum" required="required" class="smallCell" />
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+        <table class="table table-striped table-dark" id="myTable">
+          <thead>
+            <tr>
+              <th scope="col" style="width: 20rem">Process Name</th>
+              <th scope="col" style="width: 20rem">Process ID</th>
+              <th scope="col" style="width: 20rem">Arrival Time</th>
+              <th scope="col" style="width: 20rem">Burst Time</th>
+              <th scope="col" style="width: 20rem">Delete Row</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                P<%= idx %>
+              </td>
+              <td>
+                <input type="number" min="1" max="20" name="pId" id="pId" required="required" style="width: 200px" />
+              </td>
+              <td><input type="number" name="at" id="at" required="required" /></td>
+              <td><input type="number" name="bt" id="bt" required="required" /></td>
+              <td>
+                <button onclick="deleteRow(this)" class="delete-button">
+                  Delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div style="display: inline; margin: 20px 30px">
+          <button type="button" class="b1" type="button" onclick="addRow(); indexInc();">
+            Add Row
+          </button>
+        </div>
+
+        <div style="display: inline; margin: 20px 30px;">
+          <button type="submit" class="b1">Calculate</button>
+        </div>
+      </form>
+
+      <script>
+        // the logic for when if there is only one row you cannot submit the form.
+        var form = document.getElementById("myForm");
+        form.addEventListener("submit", function (event) {
+          var table = document.getElementById("myTable");
+          if (table.rows.length <= 2) {
+            alert("You must enter at least two processes to calculate.");
+            event.preventDefault(); // prevent form submission
+          }
+        });
+
+        // the logic for adding a row and the logic for delete row button
+        function indexInc() {
+          idx++;
+        }
+
+        function addRow() {
+          var table = document.getElementById("myTable");
+          var newRow = table.insertRow(-1); // Add row at the end
+          var pNameCell = newRow.insertCell(0);
+          var pIdCell = newRow.insertCell(1);
+          var atCell = newRow.insertCell(2);
+          var btCell = newRow.insertCell(3);
+          var buttonCell = newRow.insertCell(4);
+          pNameCell.innerHTML = '<td>P<%=idx%></td>';
+          pIdCell.innerHTML = '<input type="text" name="pId" value="" required="required">';
+          atCell.innerHTML = '<input type="text" name="at" value="" required="required">';
+          btCell.innerHTML = '<input type="text" name="bt" value="" required="required">';
+          var deleteButton = document.createElement("button");
+          deleteButton.classList.add("delete-button");
+          deleteButton.innerHTML = "Delete";
+          deleteButton.onclick = function () {
+            deleteRow(this);
+          };
+          buttonCell.appendChild(deleteButton);
+        }
+
+        function deleteRow(btn) {
+          var row = btn.parentNode.parentNode;
+          row.parentNode.removeChild(row);
+        }
+      </script>
     </div>
-  </form>
-
-  <script>
-    // the logic for when if there is only one row you cannot submit the form.
-    var form = document.getElementById("myForm");
-    form.addEventListener("submit", function (event) {
-      var table = document.getElementById("myTable");
-      if (table.rows.length <= 2) {
-        alert("You must enter at least two processes to calculate.");
-        event.preventDefault(); // prevent form submission
-      }
-    });
-
-    // the logic for adding a row and the logic for delete row button
-    function addRow() {
-      var table = document.getElementById("myTable");
-      var newRow = table.insertRow(-1); // Add row at the end
-      var pIdCell = newRow.insertCell(0);
-      var atCell = newRow.insertCell(1);
-      var btCell = newRow.insertCell(2);
-      var buttonCell = newRow.insertCell(3);
-      pIdCell.innerHTML = '<input type="text" name="pId" value="" required="required">';
-      atCell.innerHTML = '<input type="text" name="at" value="" required="required">';
-      btCell.innerHTML = '<input type="text" name="bt" value="" required="required">';
-      var deleteButton = document.createElement("button");
-      deleteButton.classList.add("delete-button");
-      deleteButton.innerHTML = "Delete";
-      deleteButton.onclick = function () {
-        deleteRow(this);
-      };
-      buttonCell.appendChild(deleteButton);
-    }
-
-    function deleteRow(btn) {
-      var row = btn.parentNode.parentNode;
-      row.parentNode.removeChild(row);
-    }
-  </script>
-</div>
-<%- include('./includes/end.ejs') %>
+    <%- include('./includes/end.ejs') %>
