--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,8 @@
                 <div class="col-md-6 text d-none d-lg-block mt-5">
                     <section class="text text-center">
                         <h1 class="hyperplexed" data-value="TEAM/SEVEN">TEAM/SEVEN</h1>
-                        <h2 class="subHeadings mb-2"><a href="#second"><span><</span>ROUND ROBIN <span>></span></a> </h2>
+                        <h2 class="subHeadings" id="sim"><span id="sim-span">——</span>SIMULATIONS<span id="sim-span">——</span></h2>
+                        <h2 class="subHeadings mb-2"><a href="/rrInfo.ejs"><span><</span>ROUND ROBIN <span>></span></a> </h2>
                         <h2 class="subHeadings mb-2"><a href="#third"><span><</span>BANKER'S ALGORITHM </a> <span>></span></h2>
                         <h2 class="subHeadings mb-2"><a href="#fourth"><span><</span>SCAN C-SCAN ALGORITHM <span>></span></a></a> </h2>
                         <h2 class="subHeadings mb-2"><a href="#fifth"><span><</span>MRU PAGE REPLACEMENT <span>></span></a></a> </h2>
