--- a/views/rrSolution.ejs
+++ b/views/rrSolution.ejs
@@ -68,7 +68,7 @@
         <% } %>
     </tr>
     <tr style="border-bottom: black;">
-      <td style="">Time</td>
+      <td>Time</td>
       <% for(let i = 0; i<completedBT.length; i++){ %>
         <td style="border-left: 1px solid #787878; font-size: 15px; text-align: left; vertical-align: top; height: 100%; padding-top: 5px;"><%=timeStamp%></td>
         <% timeStamp=timeStamp+completedBT[i]; %>
