--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,10 +28,10 @@
                     <section class="text text-center">
                         <h1 class="hyperplexed" data-value="TEAM/SEVEN">TEAM/SEVEN</h1>
                         <h2 class="subHeadings" id="sim"><span id="sim-span">——</span>SIMULATIONS<span id="sim-span">——</span></h2>
-                        <h2 class="subHeadings mb-2"><a href="/rrInfo.ejs"><span><</span>ROUND ROBIN <span>></span></a> </h2>
-                        <h2 class="subHeadings mb-2"><a href="#third"><span><</span>BANKER'S ALGORITHM </a> <span>></span></h2>
-                        <h2 class="subHeadings mb-2"><a href="#fourth"><span><</span>SCAN C-SCAN ALGORITHM <span>></span></a></a> </h2>
-                        <h2 class="subHeadings mb-2"><a href="#fifth"><span><</span>MRU PAGE REPLACEMENT <span>></span></a></a> </h2>
+                        <h2 class="subHeadings mb-2"><a href="/rrInfo"><span><</span>ROUND ROBIN <span>></span></a> </h2>
+                        <h2 class="subHeadings mb-2"><a href="/bankerInfo"><span><</span>BANKER'S ALGORITHM </a> <span>></span></h2>
+                        <h2 class="subHeadings mb-2"><a href="/scan-cScan-info"><span><</span>SCAN C-SCAN ALGORITHM <span>></span></a></a> </h2>
+                        <h2 class="subHeadings mb-2"><a href="/MruInfo"><span><</span>MRU PAGE REPLACEMENT <span>></span></a></a> </h2>
                     </section>
                 </div>
 
