--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -61,18 +61,18 @@
               >
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/round-robin">Round Robin</a>
+                  <a class="dropdown-item" href="/rrInfo">Round Robin</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/banker's-algo"
+                  <a class="dropdown-item" href="/bankerInfo"
                     >Banker's Algorithm</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/scan-cScan">SCAN CSCAN</a>
+                  <a class="dropdown-item" href="/scan-cScan-info">SCAN CSCAN</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/mru"
+                  <a class="dropdown-item" href="/MruInfo"
                     >MRU Page Replacement Algorithm</a
                   >
                 </li>
