added About Us Route

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -78,7 +78,7 @@
                 </li>
               </ul>
             </li>
-            <a class="nav-link" href="#aboutUs">About</a>
+            <a class="nav-link" href="/aboutUs">About</a>
           </div>
         </div>
       </nav>
