--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -57,7 +57,7 @@
                 href="#"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-                >Projects</a
+                >Information</a
               >
               <ul class="dropdown-menu">
                 <li>
